# ProjectOne

./: CMakeLists.txt
externellib/glad/: CMakeLists.txt
externellib/glad/include/glad/: glad.h
externellib/glad/src/: glad.c
src/: main.cpp
